--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@
 #                                                 /____/        
 #
 # Title of your website
-title: "Feeling Responsive"
+title: "Jundiaí Regional"
 
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: "A Flexible Theme for Jekyll"
+slogan: "Jundiaí Regional"
 
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: "»Feeling Responsive« is a responsive theme for Jekyll based on the fabulous foundation framework with beautiful typography and a bright color palette."
+description: "Guia Turisticos, Atrações"
 
 
 # This URL is the main adresse. Don't include a slash at the end.
@@ -119,7 +119,7 @@ defaults:
 #  /____/_____/\____/    Verify Website to Webmaster Tools
 
 #google_author:             "https://plus.google.com/u/0/118311555303973066167"
-#google_site_verification:  "Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ"
+google_site_verification:  "rRR3WcMZEdRl7kM2Wa_afqHAJoghl0CLfRyhE1xZ55E"
 #bing_webmastertools_id:    "0FB4C028ABCF07C908C54386ABD2D97F"
 # alexa_verify_id:         ""
 
@@ -200,4 +200,4 @@ sass:
 #
 # used in _includes/footer_scripts.html
 
-#google_analytics_tracking_id: UA-60112281-1
+google_analytics_tracking_id: UA-61346187-1
