--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ include: ['.htaccess']
 
 
 # The language setting is used in /includes/header.html for html-settings
-language: "en"
+language: "pt-BR"
 
 # Exclude these files from your production _site
 exclude:
@@ -118,7 +118,7 @@ defaults:
 #   ___/ / /___/ /_/ / 
 #  /____/_____/\____/    Verify Website to Webmaster Tools
 
-#google_author:             "https://plus.google.com/u/0/118311555303973066167"
+google_author:             "https://plus.google.com/u/0/+DaviSáránszkyMesquita"
 google_site_verification:  "rRR3WcMZEdRl7kM2Wa_afqHAJoghl0CLfRyhE1xZ55E"
 #bing_webmastertools_id:    "0FB4C028ABCF07C908C54386ABD2D97F"
 # alexa_verify_id:         ""
@@ -148,11 +148,11 @@ msapplication_tilecolor:         "#334D5C"                                    # 
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<   
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-og_image:                           "http://images.phlow.de/phlow/phlow_de-logo-512x.png"
-og_locale:                          "en_EN"
+og_image:                           "http://empenhar-frkr.c9.io/assets/img/logo.png"
+og_locale:                          "pt_BR"
 og_type:                            "website"
-og_title:                           "Feeling Responsive – A Responsive Theme for Jekyll"
-og_description:                     "Feeling Responsive is built on the fabulous Foundation Framework and comes with lots of features to show your content right."
+og_title:                           "Jundiaí Regional"
+og_description:                     "Guia Turisticos e Atrações Jundiaí Regional"
 # og_url:                           ""
 # og_site_name:                     ""
 
@@ -176,7 +176,8 @@ og_description:                     "Feeling Responsive is built on the fabulous
 #
 # used in _includes/comments.html
 
-disqus_shortname: feelingresponsive
+#TODO Facebook
+#disqus_shortname: feelingresponsive
 
 
 #      _____                
