--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,23 +1,23 @@
-info_website: "About This Site"
-archive: "Archive"
-blog_archive: "Blog Archive"
+info_website: "Sobre"
+archive: "Arquivo"
+blog_archive: "Arquivo do Blog"
 blog: "Blog"
-comments_headline: "Dialogue &amp; Discussion"
-more: "More ›"
-more_articles: "More Articles"
-navigation_title: "Navigation"
-new_blog_entries: "New Blog Articles"
-next: "Next"
-next_posts: "Next Posts"
-previous: "Previous"
-previous_posts: "Previous Posts"
-read: "Read"
-read_more: "Read More&nbsp;›"
-if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
-click_here: "click here"
-next_post_in: "Next Post in"
-previous_post_in: "Previous Post in"
-breadcrumb_start: "Start"
-edit: "Edit"
-this_content_is_open_source: "This content is open source."
-help_improve_it: "Help improve it"
+comments_headline: "Comentários"
+more: "Mais ›"
+more_articles: "Mais notícias"
+navigation_title: "Navegar"
+new_blog_entries: "Novidades"
+next: "Próxima"
+next_posts: "Próximo"
+previous: "Anterior"
+previous_posts: "Anterior"
+read: "Ler"
+read_more: "Mais&nbsp;›"
+if_you_are_not_redirected_automatically: "Se você não for redirecionado,"
+click_here: "clique aqui"
+next_post_in: "Próximo em"
+previous_post_in: "Anterior em"
+breadcrumb_start: "Início"
+edit: "Editar"
+this_content_is_open_source: "Este conteúdo tem código aberto."
+help_improve_it: "Ajude!!!"
