--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,5 @@
-- title: Start
+- title: Início
   url: "/"
-  side: left
-
-- title: Getting Started
-  url: "/getting-started/"
   side: left
 
 - title: "Templates"
@@ -31,25 +27,6 @@
   - title: "Portfolio"
     url: "/design/portfolio/"
 
-- title: "Header Styles"
-  url: "/headers/"
-  side: left
-  dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
-
 - title: Documentation
   url: "/documentation/"
   side: left
@@ -70,10 +47,7 @@
   - title: "Blog Archive"
     url: "/blog/archive/"
 
-- title: "Search"
-  url: "/search/"
+- title: "Pesquisa"
+  url: "/pesquisa/"
   side: right
-
-- title: "Contact"
-  url: "/contact/"
-  side: right
+  
