--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,39 +1,14 @@
-- name: YouTube
-  url: http://www.youtube.com/PhlowMedia
-  class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
-
-- name: Twitter
-  url: http://twitter.com/phlow
-  class: icon-twitter
-  title: "Immer das Neuste von Phlow gibt es auf Twitter"
-
 - name: Facebook
-  url: http://www.facebook.com/phlow.media
+  url: https://www.facebook.com/mesquitadavi
   class: icon-facebook
-  title: "Lass uns Freunde sein!"
-
-- name: Soundcloud
-  url: http://soundcloud.com/phlow
-  class: icon-soundcloud
-  title: "Sounds und Downloads und mehr"
+  title: "Davi Saranszky Mesquita"
 
 - name: GitHub
-  url: http://github.com/phlow
+  url: https://github.com/frkr
   class: icon-github
-  title: Code und mehr...
+  title: "Davi / Código"
 
-- name: Instagram
-  url: http://instagram.com/phlowmedia
-  class: icon-instagram
-  title: "Bilder und Impressionen mit und ohne Filter..."
-
-- name: Pinterest
-  url: http://www.pinterest.com/phlowmedia/
-  class: icon-pinterest
-  title: "Bilder, Fotos, Illustrationen, Grafiken sammeln..."
-
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+- name: LinkedIn
+  url: http://br.linkedin.com/in/mesquitadavi/
+  class: icon-linkedin
+  title: "Davi Saranszky M"
