--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,8 +1,8 @@
 - menu_name: "Parceiros"
 
-- name: "Davi Saranszky Mesquita"
+- name: "Davi SM / Código fonte"
   url: "https://github.com/frkr"
-  title: "Autor / Código fonte"
+  title: "Davi SM / Código fonte"
 
 - name: "Layout Jekyll Feeling Responsive"
   url: "https://github.com/Phlow/feeling-responsive"
